# vector_distance_calculation_engine

./: CMakeLists.txt
cfg/: input_generator_config.json
csv_files/: simple_dataset.csv  vector_example.csv
csv_files/input/: dataset.csv  query.csv  simple_dataset.csv  simple_query.csv
include/: basic_json_reader.hpp  calculation_functions.hpp  csv_reader.hpp  csv_writer.hpp  cuda_hamming_distance.cuh  declarations.hpp  engine.hpp  hamming_distance.hpp  input_generator.hpp  l1_distance.hpp  l2_distance.hpp  log4dce.hpp  logger.hpp  seq_engine.hpp  settings.hpp  timing.hpp  utilities.hpp
src/: basic_json_reader.cpp  csv_reader.cpp  csv_writer.cpp  cuda_hamming_distance.cu  engine.cpp  log4dce.cpp  logger.cpp  main.cpp  seq_engine.cpp  settings.cpp  timing.cpp
